HU Implementacion de ingreso y su reporte, modales con botón
* Implementación de Logout

* Implementación Login (corr)

* Implementación Login

* test con coverage

* removed db and coverage

* Egreso terminado

* Refinamiento pre Sprint Review 1

* Editar reparación completa

* Ajustes de los modales

* Cambios en los titulos

* Ajuste de bugs

* Editar perfiles, arreglos generales Sprint 2

* Ajuste de bugs

* Pruebas editar contraseña

* Implementación de los reportes de egreso y modificación de los modales

* Implementacion de ingreso y su reporte, modales de reparacion y usuario

* Excluir html del code duplicado

* Exclusion analisis duplicado html

* acomodar archivos duplicados

* exclusion code duplicado

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,6 +4,18 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+  <!-- Favicon (icono de reloj) -->
+  <link rel="icon" type="image/png" href="{% static 'images/reloj 1.png' %}">
+  <!-- Favicon alternativo para diferentes dispositivos -->
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/reloj 1.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/reloj 1.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/reloj 1.png' %}">
+    
+  <!-- Configuración de tema de color -->
+  <meta name="theme-color" content="#C8DA53"> <!-- Código de color verde -->
+
   <title>{% block title %}Servi-Watch{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
@@ -190,8 +202,9 @@
               Gestión de servicios
             </a>
           </li>
-          <li class="{% if '/egreso/' in request.path or request.path == '/egreso' %} active {% endif %}">
-            <a href="{% url 'egreso' %}" class="{% if not '/egreso/' in request.path or request.path == '/egreso' %} menu-link {% endif %}">
+          <li class="{% if '/contable/' in request.path or request.path == '/contable' %} active {% endif %}">
+            <a href="{% url 'contabilidad_usuario' %}" 
+            class="{% if not '/contable/' in request.path or request.path == '/contable' %} menu-link {% endif %}">
               <span>
                 <img src="{% static 'images/reportes.png' %}" alt="Egresos" class="icon">
               </span>
