--- a/core/templates/usuario_contabilidad.html
+++ b/core/templates/usuario_contabilidad.html
@@ -4,22 +4,23 @@
 {% block title %}Servicios de Relojería{% endblock %}
 
 {% block content %}
-<div class="servicios-container mt-5">
-    <h2 class="titulo text-center mb-4">SERVICIOS</h2>
+<div class="productos-container mt-5">
+    <h2 class="titulo text-center mb-4">CONTABILIDAD</h2>
     <div class="row justify-content-center mt-5">
-        <div class="col-12 d-flex flex-wrap gap-4 justify-content-center">
+        <div class="col-12 d-flex flex-wrap gap-3 justify-content-center">
 
-        <a href="{% url 'reparacion_list' %}" class="text-decoration-none text-dark">  
+        <a href="{% url 'egreso' %}" class="text-decoration-none text-dark">  
             <div class="service-card text-center">
                 <div class="service-icon mx-auto mb-2">
                     <svg viewBox="0 0 24 24" fill="none">
                         <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                 </div>
-                <div class="service-title">Reparaciones</div>
+                <div class="service-title">Egresos</div>
             </div>
         </a>
 
+        <a href="{% url 'ingreso' %}" class="text-decoration-none text-dark">
             <div class="service-card text-center">
                 <div class="service-icon mx-auto mb-2">
                     <svg viewBox="0 0 24 24" fill="none">
@@ -31,27 +32,17 @@
                         <line x1="15" y1="12" x2="17" y2="12" stroke="black" stroke-width="2" />
                     </svg>
                 </div>
-                <div class="service-title">Venta Pilas</div>
+                <div class="service-title">Ingresos</div>
             </div>
-
-            <div class="service-card text-center">
-                <div class="service-icon mx-auto mb-2">
-                    <svg viewBox="0 0 24 24" fill="none">
-                        <circle cx="12" cy="12" r="9" stroke="black" stroke-width="2" />
-                        <path d="M12 7V12L15 15" stroke="black" stroke-width="2" stroke-linecap="round" />
-                    </svg>
-                </div>
-                <div class="service-title">Venta Reloj</div>
-            </div>
-
+        </a>
         </div>
     </div>
 </div>
 
 <style>
     .service-card {
-        width: 270px;
-        height: 295px;
+        width: 340px;
+        height: 375px;
         background-color: #D4E484;
         border-radius: 30px;
         display: flex;
@@ -69,18 +60,7 @@
         cursor: pointer;
     }
 
-    .service-icon {
-        width: 150px;
-        height: 150px;
-    }
-
-    .service-title {
-        font-size: 30px;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-
-    .servicios-container {
+    .productos-container {
         max-width: 900px;
         margin: 0 auto !important;
         padding: 20px;
@@ -92,6 +72,18 @@
         align-items: flex-start;
         width: 100%;
         padding: 20px;
+    }
+
+    .service-icon {
+        width: 200px;
+        height: 200px;
+    }
+
+    .service-title {
+        font-size: 50px;
+        font-weight: 600;
+        text-transform: uppercase;
+        font-family: 'inter', sans-serif;
     }
 
     @media (max-width: 500px) {
@@ -106,4 +98,5 @@
         }
     }
 </style>
+
 {% endblock %}
