--- a/core/templates/usuario-servicios.html
+++ b/core/templates/usuario-servicios.html
@@ -34,7 +34,8 @@
                 <div class="service-title">Venta Pilas</div>
             </div>
 
-            <div class="service-card text-center">
+            <a href="{% url 'reloj_venta_list' %}" class="text-decoration-none text-dark">
+                <div class="service-card text-center">
                 <div class="service-icon mx-auto mb-2">
                     <svg viewBox="0 0 24 24" fill="none">
                         <circle cx="12" cy="12" r="9" stroke="black" stroke-width="2" />
@@ -43,6 +44,7 @@
                 </div>
                 <div class="service-title">Venta Reloj</div>
             </div>
+            </a>
 
         </div>
     </div>
